// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pickCorrectInsightWording should return translations with insight when enableInsightToReport is set to false 1`] = `
Object {
  "mock.translation": "Insight",
  "mock.translation|insight": "Insight",
  "mock.translation|report": "Report",
}
`;

exports[`pickCorrectInsightWording should return translations with report when enableInsightToReport is set to true 1`] = `
Object {
  "mock.translation": "Report",
  "mock.translation|insight": "Insight",
  "mock.translation|report": "Report",
}
`;
